# met.3d

./: .gitignore  CMakeLists.txt  INSTALL  README  README.md  build-linux.sh  install-Met3D-Ubuntu.sh  met3D.pro  met3D_inclib.pri.template  prepare_shipping.sh  vcpkg.json
Gdal_Test/: make.sh  test_gdal.cpp
cmake/: Findeccodes.cmake  Findgdal.cmake  Findglfx.cmake  Findgrib_api.cmake  Findlog4cplus.cmake  Findnetcdf_cpp4.cmake  Findnetcdf_cxx4.cmake  Findproj.cmake  Findqcustomplot.cmake  common_settings.cmake  symbols_linux_gcc.map
config/: cf_stdnames.txt  default_boundingboxes.bbox.conf  default_frontend.cfg.template  default_pipeline.cfg.template  default_waypoints.ftml  log4cplus.properties
config/metview/: default_frontend.cfg  default_graticule.actor.conf  default_horizontalcross-section.actor.conf  default_pipeline.cfg  default_transferfunction.actor.conf  default_volumeboundingbox.actor.conf
doc/doxygen/: Doxyfile  doxygen.css
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/actors/: basemapactor.cpp  basemapactor.h  graticuleactor.cpp  graticuleactor.h  isosurfaceintersectionactor.cpp  isosurfaceintersectionactor.h  jetcoredetectionactor.cpp  jetcoredetectionactor.h  movablepoleactor.cpp  movablepoleactor.h  nwphorizontalsectionactor.cpp  nwphorizontalsectionactor.h  nwpsurfacetopographyactor.cpp  nwpsurfacetopographyactor.h  nwpverticalsectionactor.cpp  nwpverticalsectionactor.h  nwpvolumeraycasteractor.cpp  nwpvolumeraycasteractor.h  skewtactor.cpp  skewtactor.h  spatial1dtransferfunction.cpp  spatial1dtransferfunction.h  trajectoryactor.cpp  trajectoryactor.h  transferfunction1d.cpp  transferfunction1d.h  volumebboxactor.cpp  volumebboxactor.h
src/calvar/: README
src/data/: abstractanalysis.cpp  abstractanalysis.h  abstractdatacalculator.cpp  abstractdatacalculator.h  abstractdatacomputation.cpp  abstractdatacomputation.h  abstractdataitem.cpp  abstractdataitem.h  abstractdatareader.cpp  abstractdatareader.h  abstractdatasource.cpp  abstractdatasource.h  abstractmemorymanager.cpp  abstractmemorymanager.h  angletrajectoryfilter.cpp  angletrajectoryfilter.h  bboxtrajectoryfilter.cpp  bboxtrajectoryfilter.h  climateforecastreader.cpp  climateforecastreader.h  datarequest.cpp  datarequest.h  deltapressurepertrajectory.cpp  deltapressurepertrajectory.h  derivedmetvarsdatasource.cpp  derivedmetvarsdatasource.h  differencedatasource.cpp  differencedatasource.h  ecmwfcfreader.cpp  ecmwfcfreader.h  endpressuredifferencetrajectoryfilter.cpp  endpressuredifferencetrajectoryfilter.h  floatpertrajectorysource.cpp  floatpertrajectorysource.h  geometriclengthtrajectoryfilter.cpp  geometriclengthtrajectoryfilter.h  gribreader.cpp  gribreader.h  gridaggregation.cpp  gridaggregation.h  (+86 more)
src/glsl/: 3d_glyphs.fx.glsl  basemap.fx.glsl  colourbar.fx.glsl  effect_template.fx.glsl  hsec_contourplots.fx.glsl  hsec_cscontourplots.fx.glsl  hsec_filledcontours.fx.glsl  hsec_filledcontours_shadow.fx.glsl  hsec_marching_squares.fx.glsl  hsec_pseudocolour.fx.glsl  hsec_sample_data_routine.fx.glsl  hsec_shadow.fx.glsl  hsec_texturedcontours.fx.glsl  hsec_variabilityplots.fx.glsl  hsec_vectorglyphs.fx.glsl  hsec_verticalinterpolation.fx.glsl  hsec_windbarbs.fx.glsl  north_arrow.fx.glsl  simple_coloured_geometry.fx.glsl  simple_geometry_generation.fx.glsl  skewtrendering.fx.glsl  surface_topography.fx.glsl  text.fx.glsl  trajectory_positions.fx.glsl  trajectory_positions_shadow.fx.glsl  trajectory_tubes.fx.glsl  trajectory_tubes_shadow.fx.glsl  volume_auxiliarypressure_utils.glsl  volume_bitfield_raycaster.fx.glsl  volume_bitfield_utils.glsl  volume_compute_normalcurves.fx.glsl  volume_defines.glsl  volume_global_structs_utils.glsl  volume_hybrid_utils.glsl  volume_image.fx.glsl  volume_logpressure_utils.glsl  volume_normalcurves_geometry.fx.glsl  volume_normalcurves_initpoints.fx.glsl  volume_pressure_utils.glsl  volume_raycaster.fx.glsl  (+6 more)
src/gxfw/: actorcreationdialog.cpp  actorcreationdialog.h  actorcreationdialog.ui  adddatasetdialog.cpp  adddatasetdialog.h  adddatasetdialog.ui  camera.cpp  camera.h  colourmap.cpp  colourmap.h  mactor.cpp  mactor.h  mapprojectionsupportingactor.cpp  mapprojectionsupportingactor.h  memberselectiondialog.cpp  memberselectiondialog.h  memberselectiondialog.ui  mglresourcesmanager.cpp  mglresourcesmanager.h  mresizewindowdialog.cpp  mresizewindowdialog.h  mscenecontrol.cpp  mscenecontrol.h  mscenecontrol.ui  msceneviewglwidget.cpp  msceneviewglwidget.h  msystemcontrol.cpp  msystemcontrol.h  msystemcontrol.ui  mtypes.h  nwpactorvariable.cpp  nwpactorvariable.h  nwpactorvariableproperties.cpp  nwpactorvariableproperties.h  nwpmultivaractor.cpp  nwpmultivaractor.h  plotcollection.cpp  plotcollection.h  resizewindowdialog.ui  rotatedgridsupportingactor.cpp  (+20 more)
src/jetcores/: angletrajectoryfilter.h  endpressuredifferencetrajectoryfilter.h  geometriclengthtrajectoryfilter.h  hessiantrajectoryfilter.h  isosurfaceintersectionactor.cpp  isosurfaceintersectionactor.h  isosurfaceintersectionsource.cpp  isosurfaceintersectionsource.h  jetcoredetectionactor.cpp  jetcoredetectionactor.h  multivarpartialderivativefilter.cpp  multivarpartialderivativefilter.h  trajectoryarrowheadssource.cpp  trajectoryarrowheadssource.h  trajectoryvaluesource.h  variabletrajectoryfilter.h
src/qt_extensions/: qtpropertymanager_extensions.cpp  qtpropertymanager_extensions.h  radarchart.cpp  radarchart.h  scientificdoublespinbox.cpp  scientificdoublespinbox.h
src/system/: applicationconfiguration.cpp  applicationconfiguration.h  developmentaidsconfiguration.cpp  developmentaidsconfiguration.h  frontendconfiguration.cpp  frontendconfiguration.h  pipelineconfiguration.cpp  pipelineconfiguration.h  qtproperties.cpp  qtproperties.h  qtproperties_templates.h
src/util/: geometryhandling.cpp  geometryhandling.h  metroutines.cpp  metroutines.h  metroutines_experimental.cpp  metroutines_experimental.h  mexception.cpp  mexception.h  mstopwatch.cpp  mstopwatch.h  mutil.cpp  mutil.h
util/: process.sh
util/wxretrieval/: README.wxretrieval.md  retrieve_dwd_example.py
(+121 files in other folders)
